// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseProgress Component renders correctly 1`] = `
.emotion-0 {
  background-color: #f7f7f7;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-height: 70px;
}

.emotion-0 .chart-container {
  min-height: 70px;
}

.emotion-0 .progress-chart {
  min-height: 45px;
}

.emotion-0 .compact .progress-step,
.emotion-0 .detailed .progress-step {
  min-height: 45px;
}

.emotion-0 .progress-step,
.emotion-0 .detailed .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #d4e9e7;
}

.emotion-0 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-0.minimal {
  padding: initial;
}

.emotion-0.no-background {
  background: none;
}

.emotion-0.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #a9a9a9;
  border-radius: 2px;
  height: 12px;
}

.emotion-0.stepped-progress .detailed .progress-step {
  min-height: 20px;
}

.emotion-1 {
  display: grid;
  row-gap: 4px;
  place-items: center;
  position: absolute;
  grid-template-rows: 20px 1.25rem min-content;
  z-index: 2;
}

.emotion-1.compact {
  grid-template-rows: 45px 1.25rem min-content;
}

.emotion-2 {
  border-left-style: solid;
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-3 {
  border-left-color: #e9e9e9;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-4 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox column "
  >
    <div
      class="relative emotion-0  flexbox column stepped-progress no-background "
    >
      Phase 1: 
      100
      % (
      1
       
      device
      )
      <div
        class="chart-container"
      >
        <div
          class="progress-chart relative compact"
        >
          <div
            class="progress-step"
            style="left: 0%; width: 25%;"
          >
            <div
              class="capitalized progress-step-number undefined"
            >
              download
            </div>
            <div
              style="display: contents;"
            >
              <div
                class="progress-bar green"
                style="width: 100%;"
              />
              <div
                class="progress-bar warning"
                style="left: 100%; width: 0%;"
              />
            </div>
          </div>
          <div
            class="emotion-1 compact"
            style="left: 12.5%; width: 25%;"
          >
            <div
              class="emotion-2 emotion-3"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-4"
              data-testid="CheckCircleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
              />
            </svg>
            <div />
          </div>
          <div
            class="progress-step"
            style="left: 25%; width: 25%;"
          >
            <div
              class="capitalized progress-step-number undefined"
            >
              install
            </div>
            <div
              style="display: contents;"
            >
              <div
                class="progress-bar green"
                style="width: 0%;"
              />
              <div
                class="progress-bar warning"
                style="left: 0%; width: 0%;"
              />
            </div>
          </div>
          <div
            class="emotion-1 compact"
            style="left: 37.5%; width: 25%;"
          >
            <div
              class="emotion-2 emotion-3"
            />
            <div />
            <div />
          </div>
          <div
            class="progress-step"
            style="left: 50%; width: 25%;"
          >
            <div
              class="capitalized progress-step-number undefined"
            >
              reboot
            </div>
            <div
              style="display: contents;"
            >
              <div
                class="progress-bar green"
                style="width: 0%;"
              />
              <div
                class="progress-bar warning"
                style="left: 0%; width: 0%;"
              />
            </div>
          </div>
          <div
            class="emotion-1 compact"
            style="left: 62.5%; width: 25%;"
          >
            <div
              class="emotion-2 emotion-3"
            />
            <div />
            <div />
          </div>
          <div
            class="progress-step"
            style="left: 75%; width: 25%;"
          >
            <div
              class="capitalized progress-step-number undefined"
            >
              commit
            </div>
            <div
              style="display: contents;"
            >
              <div
                class="progress-bar green"
                style="width: 0%;"
              />
              <div
                class="progress-bar warning"
                style="left: 0%; width: 0%;"
              />
            </div>
          </div>
          <div
            class="progress-step relative flexbox progress-step-total"
          >
            <div
              class="progress-bar"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="margin-top"
    >
      Deployment is 
      <span
        class="uppercased"
      >
        Pending
      </span>
       with 
      0
       
      failures
    </div>
  </div>
</div>
`;

exports[`PhaseProgress Component renders correctly for list usage 1`] = `
.emotion-0 {
  background-color: #f7f7f7;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-height: 70px;
}

.emotion-0 .chart-container {
  min-height: 70px;
}

.emotion-0 .progress-chart {
  min-height: 45px;
}

.emotion-0 .compact .progress-step,
.emotion-0 .detailed .progress-step {
  min-height: 45px;
}

.emotion-0 .progress-step,
.emotion-0 .detailed .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #d4e9e7;
}

.emotion-0 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-0.minimal {
  padding: initial;
}

.emotion-0.no-background {
  background: none;
}

.emotion-0.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #a9a9a9;
  border-radius: 2px;
  height: 12px;
}

.emotion-0.stepped-progress .detailed .progress-step {
  min-height: 20px;
}

.emotion-1 {
  margin-bottom: 8px;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: inherit;
}

.emotion-2 iconButton {
  margin-right: 8px;
}

.emotion-3 {
  margin: 4px;
}

.emotion-4 {
  display: grid;
  row-gap: 4px;
  place-items: center;
  position: absolute;
  grid-template-rows: 20px 1.25rem min-content;
  z-index: 2;
}

.emotion-4.compact {
  grid-template-rows: 45px 1.25rem min-content;
}

.emotion-5 {
  border-left-style: solid;
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-6 {
  border-left-color: #e9e9e9;
}

.emotion-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-7 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="relative emotion-0  flexbox column stepped-progress  "
  >
    <div
      class="flexbox space-between emotion-1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-2"
        data-testid="PlayArrowIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
      <div
        class="flexbox center-aligned"
      >
        0 failures
      </div>
    </div>
    <div
      class="muted slightly-smaller emotion-3"
    >
      Phase 1 of 1
    </div>
    <div
      class="chart-container"
    >
      <div
        class="progress-chart relative detailed"
      >
        <div
          class="progress-step"
          style="left: 0%; width: 25%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 100%;"
            />
            <div
              class="progress-bar warning"
              style="left: 100%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="emotion-4 "
          style="left: 12.5%; width: 25%;"
        >
          <div
            class="emotion-5 emotion-6"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-7"
            data-testid="CheckCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
            />
          </svg>
          <div
            class="capitalized slightly-smaller"
          >
            downloaded
          </div>
        </div>
        <div
          class="progress-step"
          style="left: 25%; width: 25%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="emotion-4 "
          style="left: 37.5%; width: 25%;"
        >
          <div
            class="emotion-5 emotion-6"
          />
          <div />
          <div
            class="capitalized slightly-smaller"
          >
            installed
          </div>
        </div>
        <div
          class="progress-step"
          style="left: 50%; width: 25%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="emotion-4 "
          style="left: 62.5%; width: 25%;"
        >
          <div
            class="emotion-5 emotion-6"
          />
          <div />
          <div
            class="capitalized slightly-smaller"
          >
            rebooted
          </div>
        </div>
        <div
          class="progress-step"
          style="left: 75%; width: 25%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="progress-step relative flexbox progress-step-total"
        >
          <div
            class="progress-bar"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
